# simple_forwarder

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  build.rs  check_final.txt  check_out.txt  config.yaml
.cargo/: config.toml
.github/workflows/: release.yml
resources/: app.rc
src/: config.rs  logger.rs  main.rs  matcher.rs  proxy_client.rs  proxy_server.rs  socks5_server.rs  stats.rs  tray.rs
