[package]
name = "simple_forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wildmatch = "2.4"
ipnet = "2.9"
tray-icon = "0.14"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
bytes = "1.7"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.cargo-udeps.ignore]
normal = ["windows"]
