[package]
name = "simple_forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wildmatch = "2.4"
ipnet = "2.9"
tray-icon = "0.14"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
bytes = "1.7"
futures = "0.3"
http = "1.1"
chrono = "0.4"
notify = "6.1"
arc-swap = "1.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Gdi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.cargo-udeps.ignore]
normal = ["windows"]

[build-dependencies]
winres = "0.1"
