[package]
name = "simple_forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
wildmatch = "2.6.1"
ipnet = "2.11.0"
tray-icon = "0.14.3"
log = "0.4.22"
env_logger = "0.11.10"
anyhow = "1.0.102"
bytes = "1.11.1"
futures = "0.3.32"
http = "1.4.0"
chrono = "0.4.44"
notify = "6.1.1"
arc-swap = "1.9.0"
single-instance = "0.3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_Storage_FileSystem"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1"
